# Palm-counting-AI

./: .env.example  .gitignore  BUILD.md  ONNX_IMPLEMENTATION.md  ONNX_USAGE.md  README.md  README_BUILD.md  RUST_YOLO_ANALYSIS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
API-AI-PACK-PALM-COUNTING/: Palm-Counting-AI-Pack.postman_collection.json  README.md  build_and_zip.py  download_zip.py  ecosystem.config.js  main.py  requirements.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python_ai/: __init__.py  convert_tiff.py  infer_worker.py  infer_worker_old.py  nuitka-crash-report.xml  requirements.txt
src-tauri/scripts/: buiild_old_not_use_any_more.py  build_python_sidecar.py  build_python_sidecar_cxfreeze.py  build_python_sidecar_pyinstaller.py  create_sidecar_placeholder.py
src-tauri/src/: aipack.rs  annotate.rs  config.rs  geo.rs  image_utils.rs  infer.rs  lib.rs  main.rs  python_manager.rs  specs.rs
src/components/: AIPackBanner.tsx
src/components/ui/: button.tsx
src/pages/: Dashboard.tsx  Settings.tsx  YoloModel.tsx  index.ts
src/stores/: conversion.ts  processing.ts  theme.ts
