[package]
name = "palm-counting-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "palm_counting_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
sysinfo = "0.31"
image = { version = "0.23", features = ["tiff"] }
imageproc = "0.22"
tiff = "0.9"
ort = { version = "2.0.0-rc.11", features = ["cuda"] }
ndarray = "0.17"
# Geospatial operations (moved from Python)
geojson = "0.24"
shapefile = "0.5"
regex = "1.10"

